# func-stim

./: .gitignore  README.md
backend/: ._package.xml  package.xml  pyproject.toml  setup.cfg  setup.py
backend/fes/: ._rclpy  controller.py  controller_local.py  old_rehamove.rar  rehamovelib.py  switch_service.py
backend/fes/reha_library/: rehamovelib.py
backend/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
backend/install/fes/lib/fes/: controller
backend/install/fes/share/fes/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
backend/log/: latest  latest_build  latest_test
backend/venv3.7/: pyvenv.cfg
backend/venv3.7/Scripts/: Activate.ps1  activate  activate.bat
backend/venv3/Scripts/: Activate.ps1  activate  activate.bat
frontend/: README.md  package-lock.json  package.json
frontend/src/: ._styles.css  App.js  ControlPanel.js  LowModeControlPanel.js  MatrixArrayReadOut.js  MidModeControlPanel.js  TODO  VariableReadOut.js  WaveformReadOut.js  api.js  apiLocal.js  rclnodejs.js  rclnodejs_sub.js  server.js
glove_recordings/: draft  flexion.fbx  flexion.g3dj  parser.py  pronation.fbx  pronation.g3dj  thumb_to_pinkie_flexion.fbx  thumb_to_pinkie_flexion.g3dj
