[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Hamish Bultitude <h.bultitude@uq.net.au>"]

[tool.poetry.dependencies]
python = "^3.8"
PyVISA = "^1.11.3"
loguru = "^0.5.3"
pygraphviz = "^1.7"
pydot = "^1.4.2"
lxml = "^4.6.2"
catkin-pkg = "^0.4.23"
empy = "^3.3.4"
ifcfg = "^0.21"
lark-parser = "^0.11.2"
netifaces = "^0.10.9"
numpy = "^1.20.1"
pyparsing = "^2.4.7"
PyYAML = "^5.4.1"
setuptools = "^54.1.1"
argcomplete = "^1.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
